language/move-lang/tests/move_check/translated_ir_tests/move/signer/invalid_move_to_sender.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/translated_ir_tests/move/signer/invalid_move_to_sender.move:3:9
  │
3 │         move_to<signer>(s1, move s)
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │         │       │
  │         │       The type 'signer' does not have the ability 'key'
  │         Invalid call of 'move_to'

error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/translated_ir_tests/move/signer/invalid_move_to_sender.move:8:27
  │
8 │     struct R has key { s: signer }
  │                           ^^^^^^
  │                           │
  │                           Invalid field type. The struct was declared with the ability 'key' so all fields require the ability 'store'
  │                           The type 'signer' does not have the ability 'store'

error[E04007]: incompatible types
   ┌─ tests/move_check/translated_ir_tests/move/signer/invalid_move_to_sender.move:10:9
   │
 9 │     fun t(s1: &signer, s: signer) {
   │                           ------ Given: 'signer'
10 │         move_to<R>(s1, move s);
   │         ^^^^^^^^^^^^^^^^^^^^^^
   │         │       │
   │         │       Expected: '0x8675309::N::R'
   │         Invalid call of 'move_to'. Invalid argument for parameter '1'

